Fix issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,33 @@
+@font-face {
+	font-family: "Montserrat";
+	font-style: normal;
+	font-weight: 400;
+	src: url("fonts/montserrat-regular.ttf");
+}
+
+@font-face {
+	font-family: "Montserrat";
+	font-style: bold;
+	font-weight: 700;
+	src: url("fonts/montserrat-bold.ttf");
+}
+
 html {
-	font-size: 2.8vh;
+	font-size: 14px;
 }
 
 body {
 	color: #333;
-	font-family: sans-serif;
+	font-family: "Montserrat";
 	margin: 0;
-	min-width: 589px;
+	min-width: 300px;
 }
+
+.wrap {
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 
 .light {
 	background-color: white;
@@ -15,33 +35,31 @@ body {
 }
 
 h1 {
-	font-size: 2rem;
+	font-size: 2.6rem;
 	margin-bottom: 80px;
+	font-weight: bold;
 }
 
 .logo {
 	font-weight: bold;
-	font-size: 1.6rem;
+	font-size: 2rem;
+	margin: 0;
 }
 
 .bold {
 	font-weight: 600;
 }
 
-.button {
-	font-weight: 600;
-	font-size: 1rem;
+.hero a {
 	padding: 14px 20px;
-	text-decoration: none;
 }
 
 .full {
-	height: 100vh;
-	width: 100%;
+	height: 90vh;
 }
 
 .hero {
-	padding-top: 8vh;
+	padding-top: 12vh;
 	font-size: 16px;
 	padding-left: 50px;
 	padding-right: 50px;
@@ -59,8 +77,8 @@ h1 {
 
 .container {
 	margin: 0 auto;
-	padding-left: 50px;
-	padding-right: 50px;
+	padding-left: 30px;
+	padding-right: 30px;
 	max-width: 900px;
 	display: flex;
 }
@@ -101,34 +119,31 @@ h1 {
 .col-center {
 	margin-left: auto;
 	margin-right: auto;
+	max-width: 800px;
 }
 
 .navbar {
+	justify-content: space-between;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	justify-content: space-between;
 }
 
-img {
-	width: 220px;
-}
-
-.menu {
-	justify-content: space-between;
-	width: 100%;
-	max-width: 520px;
-	margin-left: 25px;
+.hero img {
+	width: 40%;
+	min-width: 150px;
+	max-width: 220px;
 }
 
 .section {
 	padding-top: 150px;
 	padding-bottom: 150px;
-	font-size: 1.1rem;
+	font-size: 1.4rem;
 	line-height: 2rem;
 }
 
 h2 {
-	font-size: 1.8rem;
+	font-size: 2.2rem;
+	margin-bottom: 50px;
 }
 
 footer {
@@ -140,26 +155,43 @@ footer .logo {
 	font-size: 1.2rem;
 }
 
-footer .col {
-	font-size: 0.8rem;
-}
-
 .valign {
 	display: flex;
 	align-items: center;
 }
 
 .copyright {
-	font-size: 0.9rem;
-}
-
-.menu .col {
-	margin-left: 10px;
-}
-
-.menu a {
-	text-decoration: none;
 	font-size: 1rem;
+}
+
+.menu {
+	display: block;
+	padding-top: 0;
+	padding-bottom: 0;
+}
+
+a {
 	color: white;
+	font-size: 1.4rem;
 	font-weight: bold;
+	text-decoration: none;
+}
+
+.navbar img {
+	width: 30px;
+}
+
+.menu {
+	display: block;
+}
+
+#menu-open {
+	display: none;
+}
+
+#menu-open:target {
+	display: block;
+	position: relative;
+	top: -84px;
+	padding-top: 15px;
 }
